<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="altair_settings_activity_title">Altair ROM settings</string>
    <string name="altair_settings_activity_summary">Buttons, navigation, status bar, themes</string>
    <string name="menu_button_settings_title">Buttons</string>
    <string name="menu_button_settings_summary">Tweak the actions of physical buttons on the device</string>
    <string name="menu_display_settings_title">Display</string>
    <string name="menu_display_settings_summary">Adjust various elements of the display screen</string>
    <string name="menu_gesture_settings_title">Gestures</string>
    <string name="menu_gesture_settings_summary">Adjust touchscreen gestures and button quick actions</string>
    <string name="menu_lockscreen_settings_title">Lock screen</string>
    <string name="menu_lockscreen_settings_summary">Manage lock screen settings</string>
    <string name="menu_miscellaneous_settings_title">Miscellaneous</string>
    <string name="menu_miscellaneous_settings_summary">Miscellaneous configuration settings</string>
    <string name="menu_navigation_settings_title">Navigation</string>
    <string name="menu_navigation_settings_summary">Customize navigation bar and hardware keys</string>
    <string name="menu_notification_settings_title">Notifications</string>
    <string name="menu_notification_settings_summary">Adjust notification settings</string>
    <string name="menu_qs_settings_title">Quick settings</string>
    <string name="menu_qs_settings_summary">Manage your quick settings tiles</string>
    <string name="menu_sound_settings_title">Sound</string>
    <string name="menu_sound_settings_summary">Adjust various sound-related settings</string>
    <string name="menu_status_bar_settings_title">Status bar</string>
    <string name="menu_status_bar_settings_summary">Adjust various status bar elements</string>
    <string name="menu_theme_settings_title">Themes</string>
    <string name="menu_theme_settings_summary">Change accent color, wallpaper, etc.</string>
    <string name="menu_user_interface_settings_title">User interface</string>
    <string name="menu_user_interface_settings_summary">Adjust various elements of the user interface</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="dlg_ok">OK</string>
    <string name="enable">Enable</string>
    <string name="sys_default">System default</string>
    <string name="unit_seconds">seconds</string>
    <string name="unit_steps">steps</string>
    <string name="miscellaneous_category">Miscellaneous</string>
    <string name="navbar_key_action_nothing">No action</string>
    <string name="navbar_key_action_menu">Open/close menu</string>
    <string name="navbar_key_action_app_switch">Recent apps switcher</string>
    <string name="navbar_key_action_search">Search assistant</string>
    <string name="navbar_key_action_voice_search">Voice search</string>
    <string name="navbar_key_action_in_app_search">In-app search</string>
    <string name="navbar_key_action_launch_camera">Launch camera</string>
    <string name="navbar_key_action_sleep">Turn screen off</string>
    <string name="navbar_key_action_last_app">Last app</string>
    <string name="navbar_key_action_split_screen">Split screen</string>
    <string name="navbar_key_action_kill_app">Kill foreground app</string>
    <string name="navbar_key_action_torch">Toggle flashlight</string>
    <string name="navbar_key_action_screenshot">Take screenshot</string>
    <string name="navbar_key_action_volume_panel">Toggle volume panel</string>
    <string name="navbar_key_action_clear_all_notifications">Clear all notifications</string>
    <string name="navbar_key_action_notifications_panel">Toggle notifications panel</string>
    <string name="navbar_key_action_expand_qs_panel">Expand QS panel</string>
    <string name="navbar_key_action_ringer_modes">Change ringer mode</string>
    <string name="button_wake_title">Wake device</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="swap_capacitive_keys_title">Swap capacitive buttons</string>
    <string name="swap_capacitive_keys_summary">Swap the order of recents and back buttons</string>
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="power_end_call_title">End call</string>
    <string name="power_end_call_summary">End the current call by pressing the power button</string>
    <string name="torch_long_press_power_gesture_title">Long press for flashlight</string>
    <string name="torch_long_press_power_gesture_desc">Activate the flashlight by long pressing the power button while the display is off</string>
    <string name="torch_long_press_power_timeout_title">Automatically turn flashlight off</string>
    <string name="parallel_space_title">Parallel space</string>
    <string name="parallel_space_summary">Allow running multiple instances of the same application in parallel</string>
    <string name="gms_enabled_title">Google services</string>
    <string name="gms_enabled_summary">Control Google services and core apps</string>
    <string name="notification_guts_kill_app_button_title">Kill app button</string>
    <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
    <string name="notification_reticker_category">reTicker</string>
    <string name="reticker_title">Enable reTicker</string>
    <string name="reticker_summary">Replace heads-up notification with slim and less invasive version of redesigned ticker</string>
    <string name="reticker_colored_title">Use app colored background</string>
    <string name="reticker_colored_summary">Replace reTicker background color using notification app main color</string>
    <string name="notification_heads_up_category">Heads up</string>
    <string name="heads_up_notifications_title">Enable heads up</string>
    <string name="heads_up_notifications_summary">Allow pop up notifications</string>
    <string name="less_boring_heads_up_title">Limited heads up</string>
    <string name="less_boring_heads_up_summary">Display popup notifications only for alarm, dialer and messaging app</string>
    <string name="notification_heads_up_timeout_title">Timeout</string>
    <string name="notification_heads_up_timeout_summary">Time to display heads up notifications</string>
    <string name="volume_panel_title">Volume panel</string>
    <string name="volume_panel_on_left_title">Show panel on left</string>
    <string name="volume_panel_on_left_summary">Display volume panel on the left side of the screen</string>
    <string name="volume_dialog_timeout_title">Volume panel timeout</string>
    <string name="volume_steps_title">Volume Steps</string>
    <string name="max_music_volume_title">Media</string>
    <string name="max_call_volume_title">Calls</string>
    <string name="max_alarm_volume_title">Alarms</string>
    <string name="status_bar_icons_category">Status bar icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="status_bar_colored_icons_title">Colored icons</string>
    <string name="status_bar_colored_icons_summary">Use proper app icons for notification icons in status bar</string>
    <string name="status_bar_bluetooth_battery_title">Bluetooth battery status</string>
    <string name="status_bar_bluetooth_battery_summary">Display battery status for the connected bluetooth device, if available</string>
    <string name="statusbar_notif_count_title">Show notification count</string>
    <string name="statusbar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_privacy_indicators_category">Privacy indicators</string>
    <string name="status_bar_mic_camera_privacy_indicator_title">Microphone and camera privacy indicator</string>
    <string name="status_bar_mic_camera_privacy_indicator_summary">Show separate indicator when any app uses microphone or camera</string>
    <string name="status_bar_location_privacy_indicator_title">Location privacy indicator</string>
    <string name="status_bar_location_privacy_indicator_summary">Show separate indicator when any app uses location services</string>
    <string name="status_bar_projection_privacy_indicator_title">Media projection privacy indicator</string>
    <string name="status_bar_projection_privacy_indicator_summary">Show indicator when device screen is projected</string>
    <string name="status_bar_network_category">Network</string>
    <string name="status_bar_data_wifi_activity_arrows_title">Mobile/wi-fi activity</string>
    <string name="status_bar_data_wifi_activity_arrows_summary">Display arrows to indicate mobile/wi-fi data activity</string>
    <string name="status_bar_use_old_mobiletype_title">Use combined mobile signal</string>
    <string name="status_bar_use_old_mobiletype_summary">Show mobile type on top of the signal icon</string>
    <string name="status_bar_data_disabled_icon_title">Data disabled indicator</string>
    <string name="status_bar_data_disabled_icon_summary">Display cross sign next to signal icon when data is disabled</string>
    <string name="status_bar_show_fourg_icon_title">4G icon</string>
    <string name="status_bar_show_fourg_icon_summary">Display 4G for signal icon instead of LTE</string>
    <string name="status_bar_roaming_indicator_icon_title">Roaming indicator</string>
    <string name="status_bar_roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="status_bar_clock_category">Clock</string>
    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_clock_show_seconds_title">Show seconds</string>
    <string name="status_bar_clock_show_seconds_summary">Show hours, minutes, and seconds</string>
    <string name="status_bar_clock_auto_hide_title">Auto hide</string>
    <string name="status_bar_clock_auto_hide_launcher_summary">Hide clock if launcher is visible</string>
    <string name="status_bar_clock_auto_hide_summary">Hide clock at regular interval</string>
    <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
    <string name="status_bar_clock_auto_hide_hdur_summary">Number of seconds to hide clock</string>
    <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
    <string name="status_bar_clock_auto_hide_sdur_summary">Number of seconds to wait before hiding clock</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_battery_category">Battery</string>
    <string name="status_bar_show_battery_title">Show battery</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Show current network traffic levels in the status bar</string>
</resources>