<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2019-2023 Altair ROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/menu_status_bar_settings_title">

    <!-- Status bar icons -->
    <PreferenceCategory
        android:title="@string/status_bar_icons_category">

        <!-- System icons -->
        <Preference
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent
                android:action="com.android.settings.action.STATUS_BAR_TUNER" />
        </Preference>

        <!-- Use proper app icons for notifications -->
        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="statusbar_colored_icons"
            android:title="@string/status_bar_colored_icons_title"
            android:summary="@string/status_bar_colored_icons_summary"
            android:defaultValue="false" />

        <!-- Show bluetooth battery status -->
        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="bluetooth_show_battery"
            android:title="@string/status_bar_bluetooth_battery_title"
            android:summary="@string/status_bar_bluetooth_battery_summary"
            android:defaultValue="true"/>

        <!-- Show notification count -->
        <com.lineage.support.preferences.SystemSettingSwitchPreference
	        android:key="statusbar_notif_count"
	        android:title="@string/statusbar_notif_count_title"
	        android:summary="@string/statusbar_notif_count_summary"
	        android:defaultValue="false" />

    </PreferenceCategory>

    <!-- Privacy indicators -->
    <PreferenceCategory
        android:title="@string/status_bar_privacy_indicators_category">

        <!-- Camera and microphone -->
        <com.lineage.support.preferences.SecureSettingSwitchPreference
            android:key="enable_camera_privacy_indicator"
            android:title="@string/status_bar_mic_camera_privacy_indicator_title"
            android:summary="@string/status_bar_mic_camera_privacy_indicator_summary"
            android:defaultValue="true" />

        <!-- Location -->
        <com.lineage.support.preferences.SecureSettingSwitchPreference
            android:key="enable_location_privacy_indicator"
            android:title="@string/status_bar_location_privacy_indicator_title"
            android:summary="@string/status_bar_location_privacy_indicator_summary"
            android:defaultValue="true" />

        <!-- Media projection -->
        <com.lineage.support.preferences.SecureSettingSwitchPreference
            android:key="enable_projection_privacy_indicator"
            android:title="@string/status_bar_projection_privacy_indicator_title"
            android:summary="@string/status_bar_projection_privacy_indicator_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <!-- Network -->
    <PreferenceCategory
        android:key="network_category"
        android:title="@string/status_bar_network_category">

        <!-- Network traffic indicators -->
        <Preference
            android:fragment="com.altair.settings.fragments.statusbar.NetworkTrafficSettings"
            android:key="network_traffic_settings"
            android:title="@string/network_traffic_settings_title"
            android:summary="@string/network_traffic_settings_summary" />

        <!-- Mobile/wi-fi data activity indicators -->
        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="data_activity_arrows"
            android:title="@string/status_bar_data_wifi_activity_arrows_title"
            android:summary="@string/status_bar_data_wifi_activity_arrows_summary"
            android:defaultValue="true" />

        <!-- Old mobile data type -->
        <SwitchPreference
             android:key="use_old_mobiletype"
             android:title="@string/status_bar_use_old_mobiletype_title"
             android:summary="@string/status_bar_use_old_mobiletype_summary" />

        <!-- Data disabled indicator -->
        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="data_disabled_icon"
            android:title="@string/status_bar_data_disabled_icon_title"
            android:summary="@string/status_bar_data_disabled_icon_summary"
            android:defaultValue="true"/>

        <!-- Show 4G instead of LTE -->
        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="show_fourg_icon"
            android:title="@string/status_bar_show_fourg_icon_title"
            android:summary="@string/status_bar_show_fourg_icon_summary"
            android:defaultValue="false"/>

        <!-- Show roaming indicator -->
        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="roaming_indicator_icon"
            android:title="@string/status_bar_roaming_indicator_icon_title"
            android:summary="@string/status_bar_roaming_indicator_icon_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <!-- Clock -->
    <PreferenceCategory
        android:key="status_bar_clock_key"
        android:title="@string/status_bar_clock_category">

        <!-- Clock position -->
        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock_position_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_clock_position_title"
            android:entries="@array/status_bar_clock_position_entries"
            android:entryValues="@array/status_bar_clock_position_values"
            android:defaultValue="0" />

        <!-- Show seconds in clock -->
        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_clock_seconds"
            android:title="@string/status_bar_clock_show_seconds_title"
            android:summary="@string/status_bar_clock_show_seconds_summary"
            android:defaultValue="false" />

        <!-- Auto-hide clock if launcher visible -->
        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="status_bar_clock_auto_hide"
            android:title="@string/status_bar_clock_auto_hide_title"
            android:summary="@string/status_bar_clock_auto_hide_launcher_summary"
            android:defaultValue="false" />

        <!-- Hide clock at regular intervals -->
        <com.lineage.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_clock_auto_hide"
            android:title="@string/status_bar_clock_auto_hide_title"
            android:summary="@string/status_bar_clock_auto_hide_summary"
            android:defaultValue="false" />

        <!-- Number of seconds to hide clock -->
        <com.lineage.support.preferences.SystemSettingSeekBarPreference
            android:key="status_bar_clock_auto_hide_hduration"
            android:title="@string/status_bar_clock_auto_hide_hdur_title"
            android:summary="@string/status_bar_clock_auto_hide_hdur_summary"
            android:max="300"
            settings:min="5"
            settings:interval="5"
            android:defaultValue="60"
            settings:units="@string/unit_seconds" />

        <!-- Number of seconds to wait before hiding clock -->
        <com.lineage.support.preferences.SystemSettingSeekBarPreference
            android:key="status_bar_clock_auto_hide_sduration"
            android:title="@string/status_bar_clock_auto_hide_sdur_title"
            android:summary="@string/status_bar_clock_auto_hide_sdur_summary"
            android:max="300"
            settings:min="5"
            settings:interval="5"
            android:defaultValue="5"
            settings:units="@string/unit_seconds" />

        <!-- Clock AM/PM style -->
        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_am_pm"
            android:title="@string/status_bar_am_pm_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:entries="@array/status_bar_am_pm_entries"
            android:entryValues="@array/status_bar_am_pm_values"
            android:defaultValue="1" />

    </PreferenceCategory>

    <!-- Battery -->
    <PreferenceCategory
        android:key="status_bar_battery_key"
        android:title="@string/status_bar_battery_category">

        <!-- Show battery status -->
        <SwitchPreference
            android:key="status_bar_show_battery"
            android:title="@string/status_bar_show_battery_title" />

        <!-- Battery status style -->
        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_battery_style"
            android:dependency="status_bar_show_battery"
            android:title="@string/status_bar_battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="2" />

        <!-- Show battery percentage -->
        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_show_battery_percent"
            android:dependency="status_bar_show_battery"
            android:title="@string/status_bar_battery_percentage_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_percentage_title"
            android:entries="@array/status_bar_battery_percentage_entries"
            android:entryValues="@array/status_bar_battery_percentage_values"
            android:defaultValue="2" />

    </PreferenceCategory>

    <!-- Status bar brightness slider -->
    <!--<PreferenceCategory
        android:title="@string/status_bar_brightness_category">-->

        <!-- Adjust brightness by sliding across status bar -->
        <!--<lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />-->

    <!--</PreferenceCategory>-->

</PreferenceScreen>
