<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2019-2022 Altair ROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/altair_settings_activity_title" >

    <!-- Buttons -->
    <Preference
        android:key="buttons_category"
        android:title="@string/menu_button_settings_title"
        android:summary="@string/menu_button_settings_summary"
        android:fragment="com.altair.settings.fragments.CustomButtonSettings"
        android:icon="@drawable/ic_settings_menu_buttons"/>

    <!-- Display -->
    <Preference
        android:key="display_extra_settings"
        android:title="@string/menu_display_settings_title"
        android:summary="@string/menu_display_settings_summary"
        android:fragment="com.altair.settings.fragments.CustomDisplaySettings"
        android:icon="@drawable/ic_settings_menu_display"/>

    <!-- Gestures -->
    <Preference
        android:key="gesture_settings"
        android:title="@string/menu_gesture_settings_title"
        android:summary="@string/menu_gesture_settings_summary"
        android:icon="@drawable/ic_settings_gestures"
        android:fragment="com.android.settings.gestures.GestureSettings"
        settings:controller="com.android.settings.gestures.GesturesSettingPreferenceController"/>

    <!-- Navigation -->
    <Preference
        android:key="navigation_category"
        android:title="@string/menu_navigation_settings_title"
        android:summary="@string/menu_navigation_settings_summary"
        android:fragment="com.altair.settings.fragments.CustomNavigationSettings"
        android:icon="@drawable/ic_settings_menu_navigation" />

    <!-- Quick settings panel -->
    <Preference
        android:key="quicksettings_category"
        android:title="@string/menu_qs_settings_title"
        android:summary="@string/menu_qs_settings_summary"
        android:fragment="com.altair.settings.fragments.CustomQSSettings"
        android:icon="@drawable/ic_settings_menu_qs"/>

    <!-- Status bar -->
    <Preference
        android:key="statusbar_category"
        android:title="@string/menu_status_bar_settings_title"
        android:summary="@string/menu_status_bar_settings_summary"
        android:fragment="com.altair.settings.fragments.CustomStatusBarSettings"
        android:icon="@drawable/ic_settings_menu_status_bar"/>

    <!-- Themes -->
    <Preference
        android:key="themes_category"
        android:title="@string/menu_theme_settings_title"
        android:summary="@string/menu_theme_settings_summary"
        android:fragment="com.altair.settings.fragments.CustomThemeSettings"
        android:icon="@drawable/ic_settings_menu_themes"/>

    <!-- User interface -->
    <Preference
        android:key="user_interface_category"
        android:title="@string/menu_user_interface_settings_title"
        android:summary="@string/menu_user_interface_settings_summary"
        android:fragment="com.altair.settings.fragments.CustomUserInterfaceSettings"
        android:icon="@drawable/ic_settings_menu_ui"/>

</PreferenceScreen>
