<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2019-2023 Altair ROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lineage="http://schemas.android.com/apk/res-auto"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/menu_miscellaneous_settings_title">

    <!-- Parallel space -->
    <Preference
        android:key="parallel_space"
        android:title="@string/parallel_space_title"
        android:summary="@string/parallel_space_summary">
        <intent
            android:targetPackage="ink.kscope.parallelspace"
            android:targetClass="ink.kscope.parallelspace.MainActivity" />
    </Preference>

    <!-- Google services -->
    <Preference
        android:key="gms_enabled_settings"
        android:title="@string/gms_enabled_title"
        android:summary="@string/gms_enabled_summary"
        android:fragment="com.altair.settings.fragments.misc.GmsSwitch"/>

</PreferenceScreen>
